--- a/pages/Even.html
+++ b/pages/Even.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="/dist/output.css" rel="stylesheet" />
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
+    rel="stylesheet"
+  />
+  <link href="../src/output.css" rel="stylesheet" />
   </head>
   <body style="background-image: url(../Assets/EvenBG.png)">
     <nav class="bg-slate-500">
@@ -194,7 +198,7 @@
             >Time</a
           >
           <a
-            href="./pages/Greater.html"
+            href="../pages/Greater.html"
             class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
             >Greater Than</a
           >
