--- a/pages/Greater.html
+++ b/pages/Greater.html
@@ -7,7 +7,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
       rel="stylesheet"
     />
-    <link href="../output.css" rel="stylesheet" />
+    <link href="../src/output.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body class="bg-cover" style="background-image: url(../Assets/Greater.jpg)">
@@ -198,7 +198,7 @@
             >Time</a
           >
           <a
-            href="./pages/Greater.html"
+            href="../pages/Greater.html"
             class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
             >Greater Than</a
           >
