--- a/pages/Reverse.html
+++ b/pages/Reverse.html
@@ -7,7 +7,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.css"
       rel="stylesheet"
     />
-    <link href="../output.css" rel="stylesheet" />
+    <link href="../src/output.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body
