--- a/pages/MadLib.html
+++ b/pages/MadLib.html
@@ -130,27 +130,7 @@
           <div
             class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
           >
-            <button
-              type="button"
-              class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
-            >
-              <span class="absolute -inset-1.5"></span>
-              <span class="sr-only">View notifications</span>
-              <svg
-                class="h-6 w-6"
-                fill="none"
-                viewBox="0 0 24 24"
-                stroke-width="1.5"
-                stroke="currentColor"
-                aria-hidden="true"
-              >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0"
-                />
-              </svg>
-            </button>
+         
 
             <!-- Profile dropdown -->
             <div class="relative ml-3">
@@ -233,7 +213,7 @@
     </nav>
     <section>
       <div class="gap-1 grid xl:grid-cols-6 lg:grid-col-7 md:grid-cols-6">
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p class="text-white font-nova lg:text-2xl text-xl">
             Enter a adjective
           </p>
@@ -244,7 +224,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p class="text-white font-nova lg:text-2xl text-xl">Enter a noun</p>
           <input
             id="inputB"
@@ -253,7 +233,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -267,7 +247,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -281,7 +261,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -295,7 +275,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -309,7 +289,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -323,7 +303,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -337,7 +317,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
@@ -351,7 +331,7 @@
           />
         </div>
 
-        <div class="bg-sky-600 p-4">
+        <div class=" p-4">
           <p
             class="text-white font-nova lg:text-2xl text-xl pt-2 pb-1"
             style="line-height: 1.4rem"
