--- a/pages/Add.html
+++ b/pages/Add.html
@@ -182,7 +182,7 @@
             >Time</a
           >
           <a
-            href="./pages/Greater.html"
+            href="../pages/Greater.html"
             class="text-black hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
             >Greater Than</a
           >
