--- a/pages/EightBall.html
+++ b/pages/EightBall.html
@@ -98,7 +98,7 @@
           <a href="../pages/Hello.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Hello</a>
           <a href="../pages/Add.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Add</a>
           <a href="../pages/Time.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Time</a>
-          <a href="./pages/Greater.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Greater Than</a>
+          <a href="../pages/Greater.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Greater Than</a>
           <a href="../pages/MadLib.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">MadLib</a>
           <a href="../pages/Even.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">OddEven</a>
           <a href="../pages/Reverse.html" class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">ReverseIt</a>
