--- a/pages/Reverse.html
+++ b/pages/Reverse.html
@@ -201,7 +201,7 @@
             >Time</a
           >
           <a
-            href="./pages/Greater.html"
+            href="../pages/Greater.html"
             class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium"
             >Greater Than</a
           >
